2007-11-01  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (Form.__init__): Assertion fixed.

2007-10-30  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (ViewSpec): Docstring updated.

2007-10-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (LayoutForm): Added support for
	horizontal groups.  Respect empty labels.  Stretch horizontal
	groups to page width.

	* pytis/presentation/spec.py (GroupSpec): Automatically convert
	sequences to vertical groups.

2007-10-24  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/__init__.py: Import `field'.  Validation message
	localization hacks moved here.

	* pytis/web/field.py: New module.

	* pytis/web/form.py: Use field formatters for form field export.

	* pytis/presentation/spec.py (GroupSpec.order): New method.
	(LayoutSpec.__init__): Use it.

2007-10-23  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (CbComputer): Fixed default value
	substitution.

2007-10-22  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/inputfield.py (ListField): Improved list height
	computation.

	* pytis/presentation/field.py (PresentedRow.cb_value)
	(PresentedRow._display_func): Use `DataEnumerator.row()' instead
	of `DataEnumerator.get()'.
	(PresentedRow._display_func): Added support for passing the whole
	enumerator data row into the display function.

	* pytis/presentation/spec.py (FieldSpec, CodebookSpec): Docstrings
	and asserts updated for new definition of `display' function.
	(CbComputer): Use `DataEnumerator.row()' instead of
	`DataEnumerator.get()'.

	* pytis/util/util.py (argument_names): New method.

	* pytis/data/types_.py (DataEnumerator.get): Method replaced by a
	more general method `row()'.

	* pytis/web/form.py: Field export divided into several methods.

2007-10-15  Pavel Hanak  <hanak@asellus.cz>

	* pytis/form/list.py (ListForm._on_line_commit): Add forgotten
	dictionary for `kwargs'.

2007-10-12  Tomas Cerha  <cerha@brailcom.org>
