@@ -1,3 +1,14 @@
+2007-11-25  Tomas Cerha  <cerha@brailcom.org>
+
+	* pytis/data/postgresql.py
+	(PostgreSQLStandardBindingHandler._pdbb_coalesce): Cast `DateTime'
+	to `timestamp', not `date'.
+
+	* pytis/data/_test.py (DataEnumerator.test_get): Use
+	`DataEnumerator.row()' instead of `DataEnumerator.get()'.
+	(DBDataDefault.setUp): Pass `DataEnumerator' instance as
+	`enumerator' to `DBColumnBinding', not just a data object.
+
 2007-11-01  Tomas Cerha  <cerha@brailcom.org>
 
 	* pytis/web/form.py (Form.__init__): Assertion fixed.
